<resources>
    <string name="app_name">PlakaApp</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="e_mail">E - Mail</string>
    <string name="parola">Parola</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="guvenlik_sorusu">Güvenlik Sorusu</string>
    <string name="g_sorusu_cevabi">Cevap</string>
    <string name="sifremi_unuttum">Şifremi Unuttum</string>
    <string name="sifre_yenile">Şifreyi Yenile</string>
    <string name="misafir_girisi">Misafir Girişi</string>
    <string name="kontrol_et">Kontrol Et</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="Hosgeldiniz">Hoşgeldiniz</string>
    <string name="ornek_plaka">35 ABC 23</string>
    <string name="Plaka">Plaka</string>
    <string name="Yaziniz">Yazınız</string>
    <string name="Gonder">Gönder</string>
    <string name="Ara">Ara</string>
    <string name="Git">Git</string>
    <string name="bulunanlar">Bulunanlar</string>
    <string name="bulunanlar_upper">BULUNANLAR</string>
    <string name="bildirimler">Bildirimler</string>
    <string name="temizle">TEMİZLE</string>
    <string name="profil_upper">PROFİL</string>
    <string name="sorgula">sorgula</string>
    <string name="konum">Konum</string>
    <string name="foto_cek">Plakanın fotoğrafını çek</string>
    <string name="cevap_dondur">Cevabı Döndür</string>
    <string name="cikis_yap">Çıkış Yap</string>

    <string name="home">Anasayfa</string>
    <string name="add_text">Hızlı Yazı</string>
    <string name="search">Arama</string>
    <string name="notification">Bildirim</string>
    <string name="profil">Profil</string>


    <string name="uyeler">Üyeler</string>
    <string name="bt_ekle">Ekle</string>
    <string name="bt_guncelle">Güncelle</string>
    <string name="bt_sil">Sil</string>
</resources>
