<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_addtext"
        android:icon="@drawable/ic_add_box_white_24dp"
        android:title="@string/add_text" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/notification" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/profil" />

</menu>