<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/Logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#003748"
            android:text="@string/app_name"
            android:layout_marginBottom="40dp"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_plakaNumarasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#003748"
            android:textAlignment="center"
            android:text="@string/Plaka"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_plakaNumarasi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_rounded_corner"
            android:drawableLeft="@drawable/ic_directions_car_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/ornek_plaka"
            android:inputType="text"
            android:paddingLeft="10dp"/>

        <Button
            android:id="@+id/btn_yazigonder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:layout_marginBottom="40dp"
            android:onClick="checkLogin"
            android:text="@string/Ara"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tv_yaziniz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#003748"
            android:text="@string/bulunanlar"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_hizliyazi"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_rounded_corner"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:paddingLeft="20dp"
            android:enabled="false"
            android:paddingRight="20dp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_git"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_rounded_corner"
            android:onClick="checkLogin"
            android:text="@string/Git"
            android:textColor="#ffffff" />


    </LinearLayout>

</LinearLayout>