<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#003748"
            android:text="@string/app_name"
            android:layout_marginBottom="60dp"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_plakaNumarasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#003748"
            android:text="@string/Plaka"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_plakaNumarasi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_directions_car_black_24dp"
            android:background="@drawable/et_rounded_corner"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="30dp"
            android:hint="@string/ornek_plaka"/>

        <TextView
            android:id="@+id/tv_yaziniz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#003748"
            android:text="@string/Yaziniz"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_hizliyazi"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:background="@drawable/et_rounded_corner"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:inputType="textMultiLine"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/btn_yazigonder"
            android:onClick="checkLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:textColor="#ffffff"
            android:text="@string/Gonder" />


    </LinearLayout>

</LinearLayout>