<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="plakaapp.plakaapp.MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="10dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/Logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="#003748"
            android:text="@string/app_name"
            android:layout_marginBottom="60dp"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="#003748"
            android:text="@string/profil_upper"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_profil_kuladi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:background="@drawable/et_rounded_corner"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/user_name"
            tools:ignore="RtlHardcoded,RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/et_profil_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:background="@drawable/et_rounded_corner"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/e_mail"
            tools:ignore="RtlHardcoded,RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/et_profil_parola"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:background="@drawable/et_rounded_corner"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"
            android:hint="@string/parola"
            tools:ignore="RtlHardcoded,RtlSymmetry,TextFields" />



        <Spinner
            android:id="@+id/sp_profil_gsorusu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_rounded_corner"
            android:paddingLeft="20dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


        <EditText
            android:id="@+id/et_profil_gcevap"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_rounded_corner"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/g_sorusu_cevabi"
            android:inputType="text"
            android:paddingLeft="20dp"
            tools:ignore="RtlHardcoded,RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/et_profil_guncelle"
            android:onClick="checkLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:textColor="#ffffff"
            android:text="@string/bt_guncelle" />




    </LinearLayout>
</android.support.constraint.ConstraintLayout>
