<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="plakaapp.plakaapp.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#003748"
            android:text="@string/app_name"
            android:layout_marginBottom="60dp"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_misafir_psorgula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#003748"
            android:textAlignment="center"
            android:text="@string/Plaka"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_misafir_pnumarasi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_directions_car_black_24dp"
            android:background="@drawable/et_rounded_corner"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:hint="@string/ornek_plaka"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/btn_misafir_sorgula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:layout_marginBottom="40dp"
            android:text="@string/sorgula"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tv_misafir_bulunanlar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#003748"
            android:text="@string/bulunanlar_upper"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/et_misafir_bulunanlar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:background="@drawable/et_rounded_corner"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:inputType="textMultiLine"
            android:layout_marginBottom="15dp"
            tools:ignore="LabelFor" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>