<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="plakaapp.plakaapp.MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="150dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


        <TextView
            android:id="@+id/Logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#003748"
            android:text="@string/app_name"
            android:layout_marginBottom="30dp"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/su_mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:background="@drawable/et_rounded_corner"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/e_mail"
            tools:ignore="RtlHardcoded,RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/mail_kontrol"
            android:onClick="checkLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:textColor="#ffffff"
            android:text="@string/kontrol_et" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
