<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="#003748"
            android:text="@string/app_name"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_bildirimler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/bildirimler"
                android:textColor="#003748"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_bildirimler"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:cacheColorHint="#003748"
                android:background="@drawable/et_rounded_corner"
                android:padding="10dp"
                android:divider="#003748"
                android:dividerHeight="1dp" />

            <Button
                android:id="@+id/btn_temizle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/temizle"
                android:textAlignment="center"
                android:background="@android:color/transparent"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>